# facturacionjoyeriasbot

./: .dockerignore  .env.example  .gitignore  ANALISIS_DUPLICACIONES_FASE9_10.md  CHANGELOG.md  CONTRIBUTING.md  CORRECCION_ERRORES_PRE_FASE9.md  Dockerfile  LICENSE  PLAN_20_MEJORAS_PRODUCCION.md  PROGRESS_DB_IMPROVEMENTS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_bot.py  warm-moseying-phoenix.md
.github/workflows/: ci.yml
config/: __init__.py  constants.py  environments.py  settings.py
docs/: ANALISIS_BUGS_COMPLETO.md
docs/api/: README.md  openapi.yaml
docs/architecture/: README.md
docs/deployment/: README.md
docs/development/: README.md
migrations/: env.py
migrations/versions/: 20241221_0001_initial_schema.py  20241230_0002_database_improvements.py  20260101_0003_add_payment_method.py  20260101_0004_add_performance_indexes.py  20260103_0005_fix_user_id_bigint.py
n8n/: PLAN_PDF_GENERATION.md  README.md  ejemplo_factura.html  workflow_extract.json  workflow_extract_simple.json  workflow_pdf.json
scripts/: create_initial_users.py  run_dashboard.py  typecheck.py
src/: __init__.py
src/api/: __init__.py  app.py  business_metrics.py  health.py  invoices.py  metrics.py  organizations.py  schemas.py
src/bot/: __init__.py  main.py
src/bot/handlers/: __init__.py  auth.py  callbacks.py  constants.py  formatters.py  invoice.py  keyboards.py  messages.py  shared.py  utils.py
src/bot/middleware/: __init__.py  audit.py  auth.py  base.py  error_handler.py  plan_limits.py  rate_limit.py  tenant.py
src/core/: __init__.py  context.py
src/dashboard/: __init__.py  app.py  queries.py
src/database/: __init__.py  connection.py  health.py  mixins.py  models.py
src/database/queries/: __init__.py  base.py  customer_queries.py  draft_queries.py  invoice_item_queries.py  invoice_queries.py  metrics_queries.py  user_queries.py
src/metrics/: __init__.py  aggregators.py  business.py  collectors.py  tracker.py
src/models/: __init__.py  invoice.py  user.py
src/services/: __init__.py  client_processor.py  html_generator.py  http_client.py  invoice_formatter.py  item_editor_service.py  n8n_service.py  protocols.py  text_parser.py  theme_constants.py
src/utils/: __init__.py  crypto.py  errors.py  health_check.py  logger.py  metrics.py  rate_limiter.py  validators.py
tests/: __init__.py  conftest.py  test_text_parser.py
tests/factories/: __init__.py  audit.py  base.py  invoice.py  metrics.py  organization.py  user.py
tests/integration/: __init__.py  test_api.py  test_invoice_flow.py  test_queries.py
tests/load/: README.md  __init__.py  config.py  locustfile.py
tests/load/data/: __init__.py  generators.py
tests/load/tasks/: __init__.py
tests/load/users/: __init__.py  admin.py  base.py  vendedor.py
tests/unit/: __init__.py  test_business_metrics.py  test_crypto.py  test_database_pool.py  test_factories.py  test_health.py  test_metrics.py  test_metrics_persistence.py  test_middleware.py  test_models.py  test_rate_limiter.py  test_security_fixes.py  test_traceability.py  test_validators.py
