# ==============================================================================
# Jewelry Invoice Bot - Project Configuration
# ==============================================================================
#
# Configuración centralizada para herramientas de desarrollo.
# Arquitectura: Clean Code, Modular, SaaS Multi-tenant
#
# Herramientas configuradas:
#   - MyPy: Verificación de tipos estática
#   - Ruff: Linting y formateo
#   - Pytest: Testing
#   - Coverage: Cobertura de código
#
# ==============================================================================

[project]
name = "jewelry-invoice-bot"
version = "1.0.0"
description = "Bot de Telegram para facturación de joyería - Multi-tenant SaaS"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Paradise Group"}
]
keywords = ["telegram", "bot", "invoicing", "jewelry", "saas", "multi-tenant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]


# ==============================================================================
# MYPY - Type Checking Configuration
# ==============================================================================
#
# Estrategia de verificación progresiva:
#
# NIVEL 1 - ESTRICTO (Módulos Core):
#   src/core/, src/api/schemas.py, src/api/health.py
#   - Todos los tipos requeridos
#   - Sin Optional implícito
#   - Verificación completa
#
# NIVEL 2 - MODERADO (Módulos de Servicio):
#   src/services/, src/database/, src/utils/
#   - Tipos opcionales permitidos
#   - Optional implícito habilitado
#   - Errores reportados pero no bloqueantes
#
# NIVEL 3 - PERMISIVO (Handlers Legacy):
#   src/bot/handlers/, src/bot/middleware/
#   - Migración gradual
#   - Errores ignorados temporalmente
#
# ==============================================================================

[tool.mypy]
# Python version
python_version = "3.11"

# Paths
files = ["src"]
exclude = [
    "tests/",
    "alembic/",
    "scripts/",
    "venv/",
    "__pycache__/",
    "\\.git/",
]

# Output
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true
color_output = true
error_summary = true

# Import handling
ignore_missing_imports = true
follow_imports = "silent"

# Warnings
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_no_return = true

# Strictness (base level - permisivo)
strict_optional = false
implicit_optional = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
check_untyped_defs = true

# Misc
no_implicit_reexport = false
namespace_packages = true


# ==============================================================================
# MEJORA 15: MYPY ESTRICTO EN CI - COMPLETADA ✅
# ==============================================================================
#
# FASE 1: Configuración Base ✅ COMPLETADA
# FASE 2: Errores [assignment] ✅ COMPLETADA
# FASE 3: Union-Attr (Null Safety) ✅ COMPLETADA
# FASE 4: Index & Operators ✅ COMPLETADA
# FASE 5: Database & Models ✅ COMPLETADA
# FASE 6: Limpieza Final ✅ COMPLETADA
#
# Todos los módulos verificados con MyPy sin errores.
# Arquitectura: Clean Code, Modular, SaaS Multi-tenant
#
# ==============================================================================


# ==============================================================================
# Módulos de Aplicación - Verificación Habilitada
# ==============================================================================
# Todos los módulos src/* con verificación de tipos activa.
# Errores corregidos siguiendo principios Clean Code y SaaS.
# ==============================================================================

[[tool.mypy.overrides]]
module = [
    "src.services.*",
    "src.database.*",
    "src.core.*",
    "src.api.*",
    "src.utils.*",
    "src.metrics.*",
    "src.models.*",
    "src.bot.*",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
strict_optional = false
implicit_optional = false
ignore_errors = false


# ==============================================================================
# External Libraries - Ignorar completamente
# ==============================================================================

[[tool.mypy.overrides]]
module = [
    "telegram.*",
    "aiohttp.*",
    "redis.*",
    "sqlalchemy.*",
    "alembic.*",
    "factory.*",
    "faker.*",
    "asyncpg.*",
    "pydantic.*",
    "fastapi.*",
    "uvicorn.*",
    "weasyprint.*",
    "jinja2.*",
]
ignore_missing_imports = true
ignore_errors = true


# ==============================================================================
# RUFF - Linting & Formatting
# ==============================================================================
#
# Ruff reemplaza múltiples herramientas:
#   - flake8 (linting)
#   - isort (import sorting)
#   - black (formatting)
#   - pyupgrade (syntax upgrades)
#
# ==============================================================================

[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

# Archivos a excluir
exclude = [
    ".git",
    ".ruff_cache",
    ".mypy_cache",
    "__pycache__",
    "venv",
    ".venv",
    "alembic/versions",
    "*.pyi",
]

[tool.ruff.lint]
# Reglas habilitadas
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]

# Reglas ignoradas
ignore = [
    "E501",     # line too long (manejado por formatter)
    "B008",     # function call in default argument
    "ARG001",   # unused function argument (común en handlers)
    "ARG002",   # unused method argument
    "PLR0913",  # too many arguments
    "PLR2004",  # magic value comparison
    "PLW0603",  # global statement
    "ERA001",   # commented code (a veces útil)
]

# Permitir autofix para todas las reglas
fixable = ["ALL"]
unfixable = []

# Permitir variables no usadas si empiezan con _
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = ["src", "config", "tests"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
force-single-line = false
lines-after-imports = 2
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
# Tests pueden tener más flexibilidad
"tests/**/*.py" = [
    "ARG",      # unused arguments en fixtures
    "PLR2004",  # magic values en assertions
    "S101",     # assert statements
]
# Alembic migrations
"alembic/**/*.py" = [
    "ERA001",   # commented code en migrations
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 80


# ==============================================================================
# PYTEST - Testing Configuration
# ==============================================================================

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Async support
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Output options
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-ra",
    "--showlocals",
]

# Test markers
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
]

# Warnings filter
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

# Logging
log_cli = false
log_cli_level = "WARNING"


# ==============================================================================
# COVERAGE - Code Coverage Configuration
# ==============================================================================

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/alembic/*",
    "*/.venv/*",
    "*/venv/*",
]

[tool.coverage.paths]
source = [
    "src/",
]

[tool.coverage.report]
exclude_lines = [
    # Standard pragmas
    "pragma: no cover",

    # Debug/development code
    "def __repr__",
    "def __str__",

    # Defensive programming
    "raise AssertionError",
    "raise NotImplementedError",

    # Main execution
    "if __name__ == .__main__.:",

    # Type checking blocks
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",

    # Abstract methods
    "@abstractmethod",
    "@abc.abstractmethod",

    # Unreachable code markers
    "\\.\\.\\.",  # ellipsis
    "pass",

    # Platform specific
    "if sys.platform",
]

# Minimum coverage threshold
fail_under = 80
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.html]
directory = "htmlcov"
title = "Jewelry Invoice Bot - Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"


# ==============================================================================
# BANDIT - Security Linting
# ==============================================================================

[tool.bandit]
exclude_dirs = [
    "tests",
    "alembic",
    ".venv",
    "venv",
]
skips = [
    "B101",  # assert_used (útil en desarrollo)
    "B104",  # hardcoded_bind_all_interfaces (dev server)
]
